# streaming-zero-knowledge-proofs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  blocks.cbor  manifest.cbor  proof_fold.cbor  proof_stark.cbor
benchmarks/harness/: Cargo.toml
benchmarks/harness/src/: main.rs
configs/: sezkp.toml
configs/profiles/: medium.toml  small.toml
crates/sezkp-cli/: Cargo.toml
crates/sezkp-cli/src/: main.rs
crates/sezkp-core/: Cargo.toml
crates/sezkp-core/fuzz/: Cargo.toml
crates/sezkp-core/fuzz/fuzz_targets/: block_decode.rs
crates/sezkp-core/src/: artifact.rs  backend.rs  combiner.rs  evaluator.rs  io.rs  io_jsonl.rs  lib.rs  prover.rs  replay.rs  types.rs
crates/sezkp-core/tests/: invariants.proptest-regressions  invariants.rs
crates/sezkp-crypto/: Cargo.toml
crates/sezkp-crypto/src/: lib.rs
crates/sezkp-ffi/: Cargo.toml
crates/sezkp-ffi/src/: lib.rs
crates/sezkp-ffts/: Cargo.toml
crates/sezkp-ffts/benches/: ntt.rs
crates/sezkp-ffts/src/: coset.rs  domain.rs  lib.rs  ntt.rs  twiddle.rs
crates/sezkp-ffts/tests/: coset_lde.rs  ntt_roundtrip.rs
crates/sezkp-fold/: Cargo.toml
crates/sezkp-fold/src/: api.rs  are.rs  are_replay.rs  driver.rs  fold.rs  io.rs  leaf.rs  lib.rs  verify.rs
crates/sezkp-fold/tests/: are_iface.rs  benchmarks.rs  fold_line.rs  harness.rs  leaf_pi.rs
crates/sezkp-merkle/: Cargo.toml
crates/sezkp-merkle/src/: lib.rs
crates/sezkp-node/: Cargo.toml
crates/sezkp-node/src/: lib.rs
crates/sezkp-py/: Cargo.toml
crates/sezkp-py/src/: lib.rs
crates/sezkp-scheduler/: Cargo.toml
crates/sezkp-scheduler/src/: dfs.rs  evaluator.rs  hct.rs  lib.rs
crates/sezkp-stark/: Cargo.toml
crates/sezkp-stark/src/: air.rs  commit.rs  iop.rs  lib.rs  verify.rs  witness.rs
crates/sezkp-stark/src/v1/: air.rs  columns.rs  columns_stream.rs  field.rs  fri.rs  fri_stream.rs  lde.rs  masking.rs  merkle.rs  openings.rs  params.rs  proof.rs  prover.rs  verify.rs
crates/sezkp-stark/tests/: air_fail_bit_range.rs  air_fail_endpoint.rs  air_fail_head_update.rs  air_fail_write_outside.rs  air_from_openings_fail_boundary.rs  air_from_openings_ok.rs  air_ok.rs  param_vectors.rs  stream_columns_equiv.rs  stream_fri_equiv.rs  stream_openings.rs  utils.rs
crates/sezkp-trace/: Cargo.toml
crates/sezkp-trace/src/: format.rs  generator.rs  io.rs  lib.rs  partition.rs
crates/sezkp-vm-riscv/: Cargo.toml
crates/sezkp-vm-riscv/src/: lib.rs  main.rs
docs/: api.md  architecture.md  are.md  config.md  hct.md  overview.md  protocol-folding.md  protocol-stark.md  roadmap.md  scheduler.md  security.md
examples/etl-proof/: run.py
examples/long-context/: kv-cache.md
examples/minimal-riscv/: blocks.cbor  manifest.cbor  proof_stark.cbor  run.sh  trace.cbor
examples/minimal-riscv/program/: demo.rvi
scripts/: audit.sh  build-all.sh  dev-setup.sh  fmt.sh  lint.sh  release-checklist.sh  scale_ablation.zsh  scale_minram.zsh  scale_minram_large.zsh  scale_minram_long.zsh  scale_streaming_minram.zsh  scale_streaming_sublinear.zsh  scale_streaming_sublinear_v2.zsh  scale_suite.zsh  test_all.zsh
specs/: accumulator.md  block-summary.md  interval-summary.md  proof-artifacts.md  serde.md  trace-format.md
specs/stark-v1/: transcript_inputs.json
