[package]
name = "sezkp-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for SEZKP"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

sezkp-core = { path = "../sezkp-core" }
sezkp-trace = { path = "../sezkp-trace" }
sezkp-merkle = { path = "../sezkp-merkle" }
sezkp-stark = { path = "../sezkp-stark" }
sezkp-fold  = { path = "../sezkp-fold" }
