[package]
name = "sezkp-core"
version = "0.1.0"
edition = "2021"
description = "Core data types, bounded replay, and combiners for SEZKP"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
anyhow = "1"

[dev-dependencies]
proptest = "1"
