[package]
name = "sezkp-fold"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
bincode = "1"
blake3 = "1"

sezkp-core = { path = "../sezkp-core" }
sezkp-crypto = { path = "../sezkp-crypto" }
sezkp-stark = { path = "../sezkp-stark" }
sezkp-scheduler = { path = "../sezkp-scheduler" }
sezkp-trace = { path = "../../crates/sezkp-trace" }
