[package]
name = "sezkp-merkle"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Streaming Merkle commitments over SEZKP block files"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
blake3 = "1"
hex = "0.4"

sezkp-core = { path = "../sezkp-core" }
