[package]
name = "sezkp-py"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Python bindings for SEZKP (feature-gated; off by default)"
publish = false

[lib]
# Default to a normal Rust library so the workspace builds cleanly.
# For distributing a Python extension, you’ll usually want: crate-type = ["cdylib", "rlib"]
# (PyO3 + abi3 produce a stable binary compatible with Python ≥ 3.8)
crate-type = ["rlib"]

[features]
# Enable to compile a CPython extension module with PyO3.
python = ["dep:pyo3"]

[dependencies]
anyhow = "1"
sezkp-core = { path = "../sezkp-core" }

# Optional; only compiled if the `python` feature is enabled.
# We use abi3 (py38+) to avoid per-Python-version rebuilds in many cases.
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"], optional = true }
