[package]
name = "sezkp-stark"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "SEZKP STARK backend (streaming-friendly skeleton)"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
bincode = "1.3"

sezkp-ffts = { path = "../sezkp-ffts" }
sezkp-core = { path = "../sezkp-core" }
sezkp-crypto = { path = "../sezkp-crypto" }

[dev-dependencies]
hex = "0.4"
sysinfo = "0.30"
