[package]
name = "sezkp-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ciborium = "0.2"
sezkp-core = { path = ".." }

[[bin]]
name = "block_decode"
path = "fuzz_targets/block_decode.rs"
test = false
doc = false
